fixed side bar sticky, search modal fix, remove fortawesome, header links white, dark mode fixes,

--- a/packages/website-2/src/styles/content.css
+++ b/packages/website-2/src/styles/content.css
@@ -84,7 +84,7 @@
   }
 
   strong {
-    @apply dark:text-primary;
+    @apply text-primary;
   }
 
   /*h1[id]::before {
